Bug 580261: relax JVM security