@@ -29,6 +29,7 @@ import java.net.URI;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -38,6 +39,7 @@ import java.util.Map.Entry;
 import java.util.Properties;
 import java.util.Set;
 import java.util.StringTokenizer;
+import java.util.stream.Collectors;
 
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IPath;
@@ -48,7 +50,6 @@ import org.eclipse.core.runtime.NullProgressMonitor;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.SubMonitor;
-import org.eclipse.core.runtime.SubProgressMonitor;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.core.variables.IStringVariableManager;
 import org.eclipse.core.variables.VariablesPlugin;
@@ -57,8 +58,9 @@ import org.eclipse.debug.core.ILaunchConfiguration;
 import org.eclipse.debug.core.ILaunchConfigurationWorkingCopy;
 import org.eclipse.jdt.launching.IJavaLaunchConfigurationConstants;
 import org.eclipse.jdt.launching.IVMInstall;
-import org.eclipse.jdt.launching.IVMInstallType;
 import org.eclipse.jdt.launching.JavaRuntime;
+import org.eclipse.jdt.launching.environments.IExecutionEnvironment;
+import org.eclipse.jdt.launching.environments.IExecutionEnvironmentsManager;
 import org.eclipse.pde.core.plugin.IPluginModelBase;
 import org.eclipse.pde.core.target.ITargetDefinition;
 import org.eclipse.pde.core.target.ITargetLocation;
@@ -177,15 +179,17 @@ public class Q7ExternalLaunchDelegate extends
 		if (monitor.isCanceled()) {
 			return false;
 		}
-		monitor.beginTask("", 4);
+		
+		SubMonitor sm = SubMonitor.convert(monitor, 4);
+		
 		if (!isHeadless(configuration)
 				&& !super.preLaunchCheck(configuration, mode,
-						new SubProgressMonitor(monitor, 1))) {
+						sm.newChild(1))) {
 			monitor.done();
 			return false;
 		}
 
-		waitForClearBundlePool(monitor);
+		waitForClearBundlePool(sm.newChild(1));
 
 		final CachedInfo info = LaunchInfoCache.getInfo(configuration);
 
@@ -195,7 +199,7 @@ public class Q7ExternalLaunchDelegate extends
 		}
 
 		final ITargetPlatformHelper target = Q7TargetPlatformManager.getTarget(configuration,
-				SubMonitor.convert(monitor, 2));
+				sm.newChild(2));
 
 		if (monitor.isCanceled()) {
 			removeTargetPlatform(configuration);
@@ -327,7 +331,7 @@ public class Q7ExternalLaunchDelegate extends
 		try {
 			Job.getJobManager().join(
 					IBundlePoolConstansts.CLEAN_BUNDLE_POOL_JOB,
-					new SubProgressMonitor(monitor, 1));
+					monitor);
 		} catch (Exception e1) {
 			Q7ExtLaunchingPlugin.getDefault().log(
 					"Failed to wait for bundle pool clear job", e1);
@@ -573,7 +577,10 @@ public class Q7ExternalLaunchDelegate extends
 
 		args = UpdateVMArgs.addHook(args, hook, properties.getProperty(OSGI_FRAMEWORK_EXTENSIONS));
 
+		args.addAll(vmSecurityArguments(config));
+		
 		args.add("-Declipse.vmargs=" + Joiner.on("\n").join(args) + "\n");
+		
 
 		info.vmArgs = args.toArray(new String[args.size()]);
 		Q7ExtLaunchingPlugin.getDefault().info(
@@ -581,6 +588,37 @@ public class Q7ExternalLaunchDelegate extends
 						+ ": AUT JVM arguments is set to : "
 						+ Arrays.toString(info.vmArgs));
 		return info.vmArgs;
+	}
+	
+	private static List<String> vmSecurityArguments(ILaunchConfiguration configuration) throws CoreException {
+		// Magic constant from org.eclipse.jdt.internal.launching.environments.ExecutionEnvironmentAnalyzer
+		ArrayList<String> result = new ArrayList<>();
+		Set<String> envs = getMatchingEnvironments(configuration);
+		if (envs.contains("JavaSE-11")) {
+			result.addAll(Arrays.asList(
+					"--add-opens", "java.base/java.lang=ALL-UNNAMED",
+					"--add-modules=ALL-SYSTEM"));
+			if (!envs.contains("JavaSE-17")) {
+				result.add("--illegal-access=permit");
+			}
+		}
+		if (envs.contains("JavaSE-12") && !envs.contains("JavaSE-17")) {
+			result.add("-Djava.security.manager=allow");
+		}
+		
+		return result;
+	}
+	
+	private static Set<String> getMatchingEnvironments(ILaunchConfiguration configuration) throws CoreException {
+		IVMInstall install = VMHelper.getVMInstall(configuration);
+		if (install == null)
+			return Collections.emptySet();
+
+		IExecutionEnvironmentsManager manager = JavaRuntime.getExecutionEnvironmentsManager();
+		return Arrays.stream(manager.getExecutionEnvironments())
+				.filter(env -> Arrays.stream(env.getCompatibleVMs()).anyMatch(install::equals))
+				.map(IExecutionEnvironment::getId)
+				.collect(Collectors.toSet());
 	}
 
 	@Override
